--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# dev logs (may contain sensitive info)
+dev/logs/*.md
+!dev/logs/.gitkeep
+
 # vercel
 .vercel
 
