--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,35 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Build outputs
+.next/
+out/
+build/
+dist/
 
-# testing
-/coverage
+# Environment
+.env*.local
+.env
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# dev logs (may contain sensitive info)
-dev/logs/*.md
-!dev/logs/.gitkeep
+# OS
+.DS_Store
+Thumbs.db
 
-# vercel
-.vercel
+# Prisma
+web/prisma/migrations/*_initial/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-/app/generated/prisma
+# Turbo
+.turbo/
